@@ -157,6 +157,8 @@ stopword = TOTP
 stopword = HOTP
 stopword = OTP
 stopword = cryptographic
+stopword = authdomain
+stopword = sharename
 
 ;;; pre-release actions
 
